--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Navbar-container{
+  display: flex;
+  justify-content: space-around;
+  padding: 3%;
+  align-items: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.Gif-conatiner {
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type=text] {
+  background-color: white;
+  padding-left: 40px;
+  height: 6vh;
+  border-radius: 6px;
+  width: 30%;
+}
+
+button {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #008CBA;
+  text-align: center;
+  text-decoration: none;
+  font-family: system-ui;
+    width: 8%;
+    height: 3vh;
+  cursor: pointer;
+  font-size: 0.5em
 }
