--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@
   color: #61dafb;
 }
 
+
+.Loading-gif{
+  height: 10%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 input[type=text] {
   background-color: white;
   padding-left: 40px;
@@ -38,3 +46,4 @@ button {
   cursor: pointer;
   font-size: 0.5em
 }
+
