--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,18 @@
   justify-content: space-around;
   padding: 3%;
   align-items: center;
+  height: 3%;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
 .Gif-conatiner {
   min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top:6%;
 }
 
 .App-link {
@@ -26,6 +32,7 @@
   align-items: center;
   justify-content: center;
 }
+
 input[type=text] {
   background-color: white;
   padding-left: 40px;
@@ -33,17 +40,3 @@ input[type=text] {
   border-radius: 6px;
   width: 30%;
 }
-
-button {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #008CBA;
-  text-align: center;
-  text-decoration: none;
-  font-family: system-ui;
-    width: 8%;
-    height: 3vh;
-  cursor: pointer;
-  font-size: 0.5em
-}
-
